--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -23,3 +23,7 @@ stats.service.enabled=true
 stats.service.host=stat-server
 stats.service.port=9090
 stats.service.scheme=http
+
+# Debug logging for stats service
+logging.level.main.server.events.services.impls.PublicServiceImpl=DEBUG
+logging.level.client.StatsClient=DEBUG
