--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -12,8 +12,12 @@ spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.password=stat
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=always
+
+# Debug logging for stats service
+logging.level.stat.server.service.StatServiceImpl=DEBUG
+logging.level.stat.server.repository.StatRepository=DEBUG
